--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
     "require": {
         "php": "^7.3|^8.0",
         "dcat/laravel-admin": "2.*",
+        "dingo/api": "^3.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "dingo/api": "^3.0",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "overtrue/laravel-wechat": "^5.1",
+        "overtrue/easy-sms": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -59,7 +61,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "easywechat-composer/easywechat-composer": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
