--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "overtrue/laravel-wechat": "^5.1",
         "phayes/geophp": "^1.2",
         "qcloud/cos-sdk-v5": "^2.6",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "yansongda/laravel-pay": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
