--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "dcat/easy-excel": "^1.1",
         "dcat/laravel-admin": "2.*",
         "dingo/api": "^3.0",
         "freyo/flysystem-qcloud-cos-v5": "^2.2",
