--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "overtrue/laravel-wechat": "^5.1",
         "phayes/geophp": "^1.2",
         "qcloud/cos-sdk-v5": "^2.6",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "super-eggs/dcat-distpicker": "^2.1",
         "tymon/jwt-auth": "^1.0",
         "yansongda/laravel-pay": "^3.3"
